# homelab-servers

./: .gitignore  Makefile  README.md  environment.yml  pair.sh  pyproject.toml
.secrets/: .consul_bootstrap.json  .nomad_bootstrap.json  .nomad_bootstrap.json~93be807f9e4d4f1172db1586e618ef514427a660  .vault_root_token.txt  .vault_root_token.txt~93be807f9e4d4f1172db1586e618ef514427a660
.trunk/: trunk.yaml
ansible/: .ansible-lint  .gitignore  ansible.cfg  requirements.yml
ansible/inventory/: hosts
ansible/playbooks/: cluster.yml  cluster_apps.yml  nas.yml  provision.yml  ufw.yml  update.yml  vault-init-unseal.yml
dev/: Known issues.md  Usefull.md  guides.md
dev/NAS setup/: Install.md  chroot.md  clean-system.md
docker/: Dockerfile.archlinux  Dockerfile.archlinux_  Dockerfile.debian  ansible copy.cfg  ansible-extra-vars.yml  ansible.cfg  docker-compose.yml  playbooks  setup-container.sh
docker/inventory/: group_vars  hosts
nomad-jobs/: alertmanager.nomad  django.nomad  echo.nomad  fabiolb.nomad  health.nomad  levant.yml  pihole.nomad  prometheus.nomad  webserver.nomad
nomad-jobs-old/: docker-registry.nomad  grafana.nomad  levant.yml  nginx.nomad  traefik.nomad
nomad-jobs/coredns/: nomad.hcl
nomad-jobs/haproxy/: nomad.hcl
nomad-jobs/pihole/: nomad.job
nomad-jobs/smallstep/: data.volume  nomad.hcl
nomad-jobs/traefik/: nomad.hcl  nomad.job  traefik.yaml
src/homelab_servers/: __init__.py
terraform/cluster/: providers.tf  root.tf  vars.tf
vagrant/: .gitignore  Vagrantfile  ansible-extra-vars.yml  ansible.cfg  playbook.yml  playbooks
(+388 files in other folders)
