[project]
name = "homelab-servers"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dave", email = "dave.nieuwenhuijzen@gmail.com" }
]
dependencies = [
    "ansible>=9.5.1",
    "netaddr>=1.2.1",
    "pre-commit>=3.7.1",
    "pre-commit-hooks>=4.6.0",
    "molecule-vagrant>=2.0.0",
    "yamllint>=1.35.1",
    "ansible-lint>=24.5.0",
    "molecule>=24.2.1",
    "docker>=7.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_servers"]
